# aether

./: .gitignore  Cargo.toml  Makefile  README.md
assets/: Info.plist  aether.desktop
docs/: plugins.md  theming.md
src/: app.rs  config.rs  main.rs  updater.rs
src/ai/: mod.rs
src/editor/: buffer.rs  cursor.rs  document.rs  mod.rs
src/input/: mod.rs
src/plugin/: api.rs  mod.rs
src/syntax/: mod.rs
src/theme/: builtin.rs  mod.rs
src/ui/: about.rs  ai_menu.rs  ai_sidebar.rs  command_palette.rs  controls.rs  editor_pane.rs  file_picker.rs  file_tree.rs  git.rs  git_commit.rs  git_diff.rs  mod.rs  popup_menu.rs  setup.rs  status_bar.rs  tab_bar.rs  welcome.rs
