[package]
name = "aether"
version = "0.1.0"
edition = "2021"
authors = ["Aether Contributors"]
description = "A beautiful TUI text editor & IDE — the best of NeoVim and Nano, with modern IDE features."
license = "MIT"
readme = "README.md"
keywords = ["editor", "tui", "ide", "terminal", "text-editor"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
fuzzy-matcher = "0.3"
unicode-width = "0.2"
whoami = "1"
chrono = "0.4"
ureq = { version = "2.9", features = ["json"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
